test/spec_vectors/simd_f64x2_cmp/fail/module_21.wat
(module (func $f64x2.gt-1st-arg-empty (result v128) (f64x2.gt (v128.const f64x2 0 0))))